--- a/dev/io.openliberty.checkpoint_fat/.classpath
+++ b/dev/io.openliberty.checkpoint_fat/.classpath
@@ -36,6 +36,7 @@
 	<classpathentry kind="src" path="test-applications/mapCache/src"/>
 	<classpathentry kind="src" path="test-applications/webCacheApp/src"/>
 	<classpathentry kind="src" path="test-applications/xmlBindings/src"/>
+	<classpathentry kind="src" path="test-applications/cracServlet/src"/>
 	<classpathentry kind="con" path="aQute.bnd.classpath.container"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
