Test mpOpenAPI config with checkpoint/restore

--- a/dev/io.openliberty.checkpoint_fat/build.gradle
+++ b/dev/io.openliberty.checkpoint_fat/build.gradle
@@ -69,6 +69,8 @@ dependencies {
   jsonbapi 'javax.json.bind:javax.json.bind-api:1.0',
   project(':com.ibm.ws.security.registry_test.servlet'),
   project(':com.ibm.ws.org.apache.directory.server')
+  requiredLibs project(':com.ibm.ws.microprofile.openapi')
+  requiredLibs project(path: ':com.ibm.websphere.org.eclipse.microprofile', configuration: 'openapi10')
 }
 
 autoFVT {
