--- a/dev/com.ibm.ws.session.cache_fat_infinispan/build.gradle
+++ b/dev/com.ibm.ws.session.cache_fat_infinispan/build.gradle
@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2019, 2022 IBM Corporation and others.
+ * Copyright (c) 2019, 2024 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
@@ -25,14 +25,15 @@ configurations {
   smallryeMetrics
 }
 
+apply from: '../wlp-gradle/subprojects/maven-central-mirror.gradle'
+
 // Define G:A:V coordinates of each dependency
 dependencies {
   caffeine 'com.github.ben-manes.caffeine:caffeine:2.8.0'
-  gson project(':io.openliberty.com.google.gson')
-  infinispanCommons 'org.infinispan:infinispan-commons:10.0.0.Final'
-  infinispanCore 'org.infinispan:infinispan-core:10.0.0.Final'
-  infinispanJCache 'org.infinispan:infinispan-jcache:10.0.0.Final'
-  infinispanJCacheCommons 'org.infinispan:infinispan-jcache-commons:10.0.0.Final'
+  infinispanCommons 'org.infinispan:infinispan-commons:12.1.7.Final'
+  infinispanCore 'org.infinispan:infinispan-core:12.1.7.Final'
+  infinispanJCache 'org.infinispan:infinispan-jcache:12.1.7.Final'
+  infinispanJCacheCommons 'org.infinispan:infinispan-jcache-commons:12.1.7.Final'
   protostream 'org.infinispan.protostream:protostream:4.3.0.Alpha13'
   jbossLogging 'org.jboss.logging:jboss-logging:3.4.1.Final'
   jGroups 'org.jgroups:jgroups:4.1.6.Final'
@@ -119,4 +120,5 @@ addRequiredLibraries {
   dependsOn addProtoStreamToSharedDir
   dependsOn addRxJavaToSharedDir
   dependsOn addSmallRyeMetricsToSharedDir
+  dependsOn addJakartaTransformer
 }
