--- a/dev/com.ibm.ws.session.cache_fat_infinispan/publish/servers/com.ibm.ws.session.cache.fat.infinispan.checkpointServerA/bootstrap.properties
+++ b/dev/com.ibm.ws.session.cache_fat_infinispan/publish/servers/com.ibm.ws.session.cache.fat.infinispan.checkpointServerA/bootstrap.properties
@@ -11,5 +11,5 @@
 #     IBM Corporation - initial API and implementation
 ###############################################################################
 bootstrap.include=../testports.properties
-com.ibm.ws.logging.trace.specification=*=info:com.ibm.ws.session.*=all
+com.ibm.ws.logging.trace.specification=*=info:com.ibm.ws.session.store.*=all:checkpoint=all
 websphere.java.security.exempt=true
